--- a/C1 - Build Basic Generative Adversarial Networks/Week 4/C1W4A_Build_a_Conditional_GAN_original-Copy1_my_solution.ipynb
+++ b/C1 - Build Basic Generative Adversarial Networks/Week 4/C1W4A_Build_a_Conditional_GAN_original-Copy1_my_solution.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -290,19 +290,27 @@
     "        n_classes: the total number of classes in the dataset, an integer scalar\n",
     "    '''\n",
     "    #### START CODE HERE ####\n",
-    "    return None\n",
+    "    return torch.nn.functional.one_hot(labels,num_classes = n_classes)\n",
     "    #### END CODE HERE ####"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "zLM5a64HWeqX"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "assert (\n",
     "    get_one_hot_labels(\n",
@@ -344,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -367,20 +375,28 @@
     "    '''\n",
     "    # Note: Make sure this function outputs a float no matter what inputs it receives\n",
     "    #### START CODE HERE ####\n",
-    "    combined = None\n",
+    "    combined = torch.cat((x,y),1)\n",
     "    #### END CODE HERE ####\n",
     "    return combined"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "OwpMxamzXcbA"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "assert tuple(combine_vectors(torch.randn(1, 4, 5), torch.randn(1, 8, 5)).shape) == (1, 12, 5)\n",
     "assert tuple(combine_vectors(torch.randn(1, 10, 12).long(), torch.randn(1, 20, 12).long()).shape) == (1, 30, 12)\n",
@@ -404,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -436,13 +452,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "3GZt2cxlZRQw"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Using downloaded and verified file: ./MNIST/raw/train-images-idx3-ubyte.gz\n",
+      "Extracting ./MNIST/raw/train-images-idx3-ubyte.gz to ./MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Using downloaded and verified file: ./MNIST/raw/train-labels-idx1-ubyte.gz\n",
+      "Extracting ./MNIST/raw/train-labels-idx1-ubyte.gz to ./MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Using downloaded and verified file: ./MNIST/raw/t10k-images-idx3-ubyte.gz\n",
+      "Extracting ./MNIST/raw/t10k-images-idx3-ubyte.gz to ./MNIST/raw\n",
+      "\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Using downloaded and verified file: ./MNIST/raw/t10k-labels-idx1-ubyte.gz\n",
+      "Extracting ./MNIST/raw/t10k-labels-idx1-ubyte.gz to ./MNIST/raw\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "criterion = nn.BCEWithLogitsLoss()\n",
     "n_epochs = 200\n",
@@ -458,7 +497,7 @@
     "])\n",
     "\n",
     "dataloader = DataLoader(\n",
-    "    MNIST('.', download=False, transform=transform),\n",
+    "    MNIST('.', download=True, transform=transform),\n",
     "    batch_size=batch_size,\n",
     "    shuffle=True)"
    ]
@@ -475,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -501,21 +540,29 @@
     "                            (e.g. C x 28 x 28 for MNIST)\n",
     "    '''\n",
     "    #### START CODE HERE ####\n",
-    "    generator_input_dim = None\n",
-    "    discriminator_im_chan = None\n",
+    "    generator_input_dim = z_dim+n_classes\n",
+    "    discriminator_im_chan = mnist_shape[0]+n_classes\n",
     "    #### END CODE HERE ####\n",
     "    return generator_input_dim, discriminator_im_chan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "YouJSJ5cVJvD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "def test_input_dims():\n",
     "    gen_dim, disc_dim = get_input_dimensions(23, (12, 23, 52), 9)\n",
@@ -572,6 +619,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one_hot_labels = get_one_hot_labels(torch.ones(133,dtype = int),10)\n",
+    "image_one_hot_labels = one_hot_labels[:, :, None, None]\n",
+    "print(image_one_hot_labels)\n",
+    "print(image_one_hot_labels.shape)\n",
+    "print(type(image_one_hot_labels))\n",
+    "image_one_hot_labels = image_one_hot_labels.repeat(1, 1, mnist_shape[1], mnist_shape[2])\n",
+    "print(image_one_hot_labels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -600,6 +662,7 @@
     "        cur_batch_size = len(real)\n",
     "        # Flatten the batch of real images from the dataset\n",
     "        real = real.to(device)\n",
+    "        \n",
     "\n",
     "        one_hot_labels = get_one_hot_labels(labels.to(device), n_classes)\n",
     "        image_one_hot_labels = one_hot_labels[:, :, None, None]\n",
@@ -616,8 +679,8 @@
     "        #        2) Generate the conditioned fake images\n",
     "       \n",
     "        #### START CODE HERE ####\n",
-    "        noise_and_labels = None\n",
-    "        fake = None\n",
+    "        noise_and_labels = combine_vectors(fake_noise, one_hot_labels)\n",
+    "        fake = gen(noise_and_labels)\n",
     "        #### END CODE HERE ####\n",
     "        \n",
     "        # Make sure that enough images were generated\n",
@@ -632,10 +695,10 @@
     "        #        3) Get the discriminator's prediction on the reals as disc_real_pred\n",
     "        \n",
     "        #### START CODE HERE ####\n",
-    "        fake_image_and_labels = None\n",
-    "        real_image_and_labels = None\n",
-    "        disc_fake_pred = None\n",
-    "        disc_real_pred = None\n",
+    "        fake_image_and_labels = combine_vectors(fake,image_one_hot_labels).detach()\n",
+    "        real_image_and_labels = combine_vectors(real, image_one_hot_labels).detach()\n",
+    "        disc_fake_pred = disc(fake_image_and_labels)\n",
+    "        disc_real_pred = disc(real_image_and_labels)\n",
     "        #### END CODE HERE ####\n",
     "        \n",
     "        # Make sure that enough predictions were made\n",
@@ -854,7 +917,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -868,7 +931,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
