--- a/C1 - Build Basic Generative Adversarial Networks/Week 4/C1W4B_Controllable_Generation_original-Copy1_my_solution.ipynb
+++ b/C1 - Build Basic Generative Adversarial Networks/Week 4/C1W4B_Controllable_Generation_original-Copy1_my_solution.ipynb
@@ -56,13 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "7_10LYXRsrWo"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/profshonku/anaconda3/envs/py/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import torch\n",
     "from torch import nn\n",
@@ -98,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -185,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -261,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -271,7 +280,7 @@
    "source": [
     "z_dim = 64\n",
     "batch_size = 128\n",
-    "device = 'cuda'"
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'"
    ]
   },
   {
@@ -288,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -449,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -468,7 +477,7 @@
     "        weight: the scalar amount by which you should weight the noise gradient\n",
     "    '''\n",
     "    #### START CODE HERE ####\n",
-    "    new_noise = None\n",
+    "    new_noise = noise+noise.grad*weight\n",
     "    #### END CODE HERE ####\n",
     "    return new_noise"
    ]
@@ -746,7 +755,7 @@
    ]
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -760,7 +769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.10.4"
   }
  },
  "nbformat": 4,
